--- a/Home 1/index.html
+++ b/Home 1/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
-        <link rel="stylesheet" href="css file/style.css">
+        <link rel="stylesheet" href="../css file/style.css">
         <script src="https://kit.fontawesome.com/d7bf1e31f7.js"
             crossorigin="anonymous"></script>
 
@@ -12,11 +12,13 @@
     <body>
         <header class="header">
             <nav>
-                <h1 class="nav-title">Port<span class="text-primary">fo</span>lio</h1>
+           <h1 class="nav-title">Port<span class="text-primary">fo</span>lio</h1>
+               
                 <ul>
-                    <li>Portfolio</li>
-                    <li>Blog</li>
-                    <button class="btn-primary">Hire Me</button>
+                    <button class="btn-primary btn-transparent-"><a href="../Home 1/index.html">Home</a></button>
+                    <button class="btn-primary btn-transparent-"><a href="../About/index.html">About Me</a></button>
+                    <button class="btn-primary btn-transparent-"><a href="../Resume/index.html">Resume</a></button>
+                    <button class="btn-primary btn-transparent-"> <a href="../footer/index.html">Contact Me</a></button>
                 </ul>
             </nav>
 
@@ -32,12 +34,11 @@
                         <p>I am a tech enthusiast,
                             I have enough knowledge about computer hardware. 
                             I know HTML and CSS. I'm still learning. If ever there is an opportunity to intern, I will move my career towards software development.</div>
-                    <button class="btn-primary"><i class="fa-solid fa-download"></i>
-                        Download Cv</button>
-                    <button class="btn-primary btn-transparent"><i class="fa-solid fa-phone"></i>
-                        Hire Me </button>
+                    <button class="btn-primary"><a href="../Cv for Download .pdf"><i class="fa-solid fa-download"></i>Download Cv</a>
+                        </button>
+                    
                 </div>
-                <img class="profile-pic" src="image/IMG_E1898.png" alt>
+                <img class="profile-pic" src="../image/IMG_E1898.png" alt>
             </div>
         </header>
         <main>
