--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <h1 class="nav-title">Port<span class="text-primary">fo</span>lio</h1>
                
                 <ul>
-                    <button class="btn-primary btn-transparent-"><a href="../Home 1/index.html">Home</a></button>
+                    <button class="btn-primary btn-transparent-"><a href="../index.html">Home</a></button>
                     <button class="btn-primary btn-transparent-"><a href="../About/index.html">About Me</a></button>
                     <button class="btn-primary btn-transparent-"><a href="../Resume/index.html">Resume</a></button>
                     <button class="btn-primary btn-transparent-"> <a href="../footer/index.html">Contact Me</a></button>
@@ -77,7 +77,7 @@
                     <hr width="25%" style="margin-top: -30px;">
                 </div>
                 <div class="section-about">
-                    <div>During my software engineering internship at <span class="text-primary-2" > <a href="https://www.emythmakers.com/" target="_blank"> <span>eMythMakers.com</span></a></span>  I played a key role in coding, testing, and debugging software applications under the guidance of experienced developers. I tackled specific projects, adapting to different technologies and methodologies along the way. Actively participating in team meetings and code reviews sharpened my communication and collaboration skills. With a dedication to quality and a thirst for learning, I consistently delivered results. This experience has strengthened my software development skills and prepared me for future endeavors in the field..</div>
+                    <div>During my software engineering internship at <span class="textbtn" > <a href="https://www.emythmakers.com/" target="_blank"> <span>eMythMakers.com</span></a></span>  I played a key role in coding, testing, and debugging software applications under the guidance of experienced developers. I tackled specific projects, adapting to different technologies and methodologies along the way. Actively participating in team meetings and code reviews sharpened my communication and collaboration skills. With a dedication to quality and a thirst for learning, I consistently delivered results. This experience has strengthened my software development skills and prepared me for future endeavors in the field..</div>
                 </div>
 
             </section>
