--- a/Resume/index.html
+++ b/Resume/index.html
@@ -14,10 +14,10 @@
             <nav>
                 <h1 class="nav-title">Port<span class="text-primary">fo</span>lio</h1>
                 <ul>
-                    <button class="btn-primary btn-transparent-"><a href="../Home 1/index.html">Home</a></button>
+                    <button class="btn-primary btn-transparent-"><a href="../index.html">Home</a></button>
                     <button class="btn-primary btn-transparent-"><a href="../About/index.html">About Me</a></button>
-                    <button class="btn-primary btn-transparent-"> <a href="../Resume/index.html">Resume</a></button>
-                    <button class="btn-primary btn-transparent-"> <a href="../footer/index.html"> Call Me</a></button>
+                    <button class="btn-primary btn-transparent-"><a href="../Resume/index.html">Resume</a></button>
+                    <button class="btn-primary btn-transparent-"> <a href="../footer/index.html">Contact Me</a></button>
                    
                 </ul>
             </nav>
