--- a/About/index.html
+++ b/About/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
-        <link rel="stylesheet" href="../css file/style.css">
+        <link rel="stylesheet" href="/css file/style.css">
         <script src="https://kit.fontawesome.com/d7bf1e31f7.js"
             crossorigin="anonymous"></script>
 
